# studyStreamlit

./: readme.md
base01/: streamlit_app.py
baseRag/: rag_v1.py  rag_v2.py
baseRag/cache/: about_me.txt.json
baseRag/db/: chroma.sqlite3
basellm/: about_me.txt  llm01.py  llm02.py  llm03.py  llmst.py  llmstTool.py
basenewllm/: llm01.py  llm02.py  llm03.py  llm04.py  reamme.md
day03/: README.md  main.py  pyproject.toml
huggingface_intro/: intro.py  pyproject.toml
rpg-llm/: rpggpt.py
rpg-llm/pages/: 2_play.py
test01/: streamlit_app.py
test01/characters/ttom/: character_sheet.json
test01/pages/: 1_sheet.py  2_play.py
test_uv/: pyproject.toml
uvpython/: cow.py
uvsingle/: cow3.py
