[project]
authors = [
  {name = "ttom921", email = "ttom921@hotmail.com"},
]
dependencies = [
  "transformers (>=4.51.1,<5.0.0)",
  "torch (>=2.6.0,<3.0.0)",
  "torchvision (>=0.21.0,<0.22.0)",
]
description = ""
name = "huggingface-intro"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.poetry]
packages = [{include = "huggingface_intro", from = "src"}]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry.dependencies]
python = ">=3.12.*"
[poetry.group.dev.dependencies]
python = ">=3.12.*"
